refactor: define wrappers