@@ -1,25 +1,35 @@
 package view;
 
 import domain.LottoTicket;
+import domain.wrappers.LottoPayment;
+
 import java.util.Arrays;
 import java.util.Scanner;
-import java.util.stream.Collectors;
 
 public class InputView {
+    public static final int TICKET_LENGTH = 6;
+
     private final Scanner scanner;
 
     public InputView() {
         scanner = new Scanner(System.in);
     }
 
-    public Integer inputPrice() {
+    public LottoPayment readLottoPayment() {
         System.out.println("구입 금액을 입력해 주세요.");
-        return Integer.valueOf(scanner.nextLine());
+        LottoPayment payment = new LottoPayment(scanner.nextInt());
+        scanner.nextLine();
+        return payment;
     }
 
-    public LottoTicket getWinnerTicket() {
+    public LottoTicket readWinnerTicket() {
         System.out.println("지난 주 당첨 번호를 입력해 주세요.");
+
         return new LottoTicket(
-                Arrays.stream(scanner.nextLine().split(", ")).map(Integer::valueOf).collect(Collectors.toList()));
+                Arrays.stream(scanner.nextLine().split(","))
+                        .map(String::trim)
+                        .map(Integer::parseInt)
+                        .toList()
+        );
     }
 }
